# RAG_Pokemon

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
RAG/: __main__.py  app.py  app_streamlit.py  create_vectorstore.py  download_dataset.py  eval.py
pokemon_dataset/: Abo.html  Abra.html  Airmure.html  Akwakwak.html  Alakazam.html  Aligatueur.html  Amonistar.html  Amonita.html  Aquali.html  Arbok.html  Arcanin.html  Artikodin.html  Aspicot.html  Axoloto.html  Azumarill.html  Aéromite.html  Boustiflor.html  Bulbizarre.html  Cadoizo.html  Canarticho.html  Caninos.html  Capumain.html  Carabaffe.html  Carapuce.html  Caratroc.html  Celebi.html  Cerfrousse.html  Chenipan.html  Chrysacier.html  Chétiflor.html  Cizayox.html  Cochignon.html  Coconfort.html  Colossinge.html  Corayon.html  Cornèbre.html  Cotovol.html  Coxy.html  Coxyclaque.html  Crocrodil.html  (+211 more)
