[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.1.5",
    "lxml>=5.4.0",
    "notebook>=7.4.2",
    "protobuf==3.20.2",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "unstructured>=0.17.2",
]
